Remove Item from Cart Added

--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -54,9 +54,7 @@
       </div>
     </header>
 
-    <main class="divider" id="product-container">
-      
-    </main>
+    <main class="divider" id="product-container"></main>
 
     <footer>&copy;NOT a real business</footer>
   </body>
