--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -18,6 +18,10 @@
 
         <ul class="cart-list"></ul>
       </section>
+      <div class="total-price-container">
+          <p class="total-text">Total:</p>
+          <p class="total-value" id="totalValue"></p>
+        </div>
       <div class="cart-button-container">
         <button class="cart-button" id="cartButton">Remove Items</button>
       </div>
