--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,32 @@
 
       <section class="products">
         <h2>Top Products</h2>
-        <ul class="product-list"></ul>
+        <ul class="products-category-list">
+          <li>
+            <a class="product-category-item" href="product_listing/index.html?category=tents">
+              <img class="product-category-image" src="images/category-tents.svg" alt="Tents" />
+              <h2>Tents</h2>
+            </a>
+          </li>
+          <li>
+            <a class="product-category-item" href="product_listing/index.html?category=backpacks">
+              <img class="product-category-image" src="images/category-backpacks.svg" alt="Backpacks" />
+              <h2>Backpacks</h2>
+            </a>
+          </li>
+          <li>
+            <a class="product-category-item" href="product_listing/index.html?category=sleeping-bags">
+              <img class="product-category-image" src="images/category-sleepingbags.svg" alt="Sleeping Bags" />
+              <h2>Sleeping Bags</h2>
+            </a>
+          </li>
+          <li>
+            <a class="product-category-item" href="product_listing/index.html?category=hammocks">
+              <img class="product-category-image" src="images/category-hammocks.svg" alt="Hammocks" />
+              <h2>Hammocks</h2>
+            </a>
+          </li>
+        </ul>
       </section>
     </main>
     <footer id="main-footer"></footer>
